
syntax = "proto3";
option go_package = "pedro.prado.grpc.server.example/infra/grpc/protoFile";


service RouteGuide{
    rpc GetFeature(Point) returns (Feature){}

    //server side streaming
    rpc ListFeatures(Rectangle) returns (stream Feature){}

    //client side streaming
    rpc RecordRoute(stream Point) returns(RouteSummary){}

    //bidirectional streaming
    rpc RouteChat(stream RouteNote) returns(stream RouteNote){}
}


//Parameters
message Point{
    int32 latitue = 1;
    int32 longitue = 2;
}

message Rectangle{
    Point lo = 1;
    Point hi = 2;
}

message RouteNote{
    Point location = 1;
    string message = 2;
}

//Responses
message Feature {
    string name = 1;
    Point location = 2;
}

message RouteSummary{
    int32 point_count = 1;
    int32 feature_count = 2;
    int32 distance = 3;
    int32 elapsed_time = 4;
}

